[package]
name = "rust-hello-http"
version = "0.1.0"
edition = "2021"
authors = ["HeyItWorked"]
description = "A RESTful CRUD API for managing a Pokémon team, built with Rust and Axum"
readme = "README.md"
license = "MIT"
repository = "https://github.com/HeyItWorked/rust-hello-http"
keywords = ["api", "rest", "crud", "axum", "pokemon"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
